Modifica disponibilidade do livro ao emprestar e mostra livros disponiveis na busca e ao entrar na tela de usuario